--- a/index.html
+++ b/index.html
@@ -45,9 +45,27 @@
     <div class="messi">
         <a href="">Begin</a>
     </div>
+    <p><input type="checkbox" name="a" value="1417">Я согласен с <a href="https://vk.com/gaiderito_bohhroma">политикой конфиденциальности</a> и тем что я живу в самаре</p>
    
     </div>
 </div>
-
+<footer>
+    никакие права не защищены
+    <hr>
+<div class="foot">
+    <div class="questions">Часто задаваемые вопросы:
+        <a href="">Вопрос 1</a>
+        <a href="">Вопрос 2</a>
+        <a href="">Вопрос 3</a>
+        <a href="">Вопрос 4</a>
+    </div>
+    <div class="images">
+        <a href="https://t.me/gaiderito"><img src="img/tg.png" alt=""></a>
+        <a href="https://instagram.org/gaiderito"><img src="img/inst.png" alt=""></a>
+        <a href="https://vk.com/gaiderito_bohhroma"><img src="img/vk.png" alt=""></a>
+    </div>
+</div>
+<p style="font-size: 14px;">copy and paste</p>
+</footer>
 </body>
 </html>
