--- a/index.html
+++ b/index.html
@@ -48,7 +48,46 @@
     <p><input type="checkbox" name="a" value="1417">Я согласен с <a href="https://vk.com/gaiderito_bohhroma">политикой конфиденциальности</a> и тем что я живу в самаре</p>
    
     </div>
+
+    <h1>Наши специалисты:</h1>
+    <hr>
+   
+    </div>
+    <div class="info">
+        <div class="card"> 
+            <div class="foto"></div>
+            <h3>Бочаров Олег Сергеевич</h3>
+            <h5>Веб-разработчик, стример, гений</h5>
+            <h6>Заслуженный бристлбек России</h6>
+        </div>
+
+        <div class="card"> 
+            <div class="foto"></div>
+            <h3>Бочаров Олег Сергеевич</h3>
+            <h5>Веб-разработчик, стример, гений</h5>
+            <h6>Заслуженный бристлбек России</h6>
+        </div>
+
+        <div class="card"> 
+            <div class="foto"></div>
+            <h3>Бочаров Олег Сергеевич</h3>
+            <h5>Веб-разработчик, стример, гений</h5>
+            <h6>Заслуженный бристлбек России</h6>
+        </div>
+
+        <div class="card"> 
+            <div class="foto"></div>
+            <h3>Бочаров Олег Сергеевич</h3>
+            <h5>Веб-разработчик, стример, гений</h5>
+            <h6>Заслуженный бристлбек России</h6>
+        </div>
+    
 </div>
+
+
+
+
+
 <footer>
     никакие права не защищены
     <hr>
